syntax = "proto3";

package account_receivable_transmitter_fee.service.v1;

option go_package = "./pb";

enum Status{
    UNKNOWN_STATUS = 0;
    PENDING_MAKER_CONFIRMATION = 1;
    ON_CHECKER = 2;
    ON_SIGNER = 3;
    ON_RELEASER = 4;
    SUCCESS = 5;
    FAILED = 6;
    RETUR = 7;
    WAITING_SCHEDULE = 8;
    REJECTED = 9;
    WAITING_PROCESS = 10;
    ON_PROGRESS = 11;
    PROCEED_NEXT_PROCESS = 12;
    APPROVED = 13;
    ACTIVE = 14;
    INACTIVE = 15;
    EXPIRED = 16;
};